--- a/ElipticneKrivulje&KompleksniTorusi.tex
+++ b/ElipticneKrivulje&KompleksniTorusi.tex
@@ -81,14 +81,14 @@
 \newcommand{\elf}{\C(\Lambda)}
 
 \newcommand{\pcoor}[1]{%
-  \begingroup\lccode`~=`: \lowercase{\endgroup
-  \edef~}{\mathbin{\mathchar\the\mathcode`:}\nobreak}%
-  [% opening symbol
-  \begingroup
-  \mathcode`:=\string"8000
-  #1%
-  \endgroup
-  ]% closing symbol
+\begingroup\lccode`~=`: \lowercase{\endgroup
+\edef~}{\mathbin{\mathchar\the\mathcode`:}\nobreak}%
+[% opening symbol
+\begingroup
+\mathcode`:=\string"8000
+#1%
+\endgroup
+]% closing symbol
 }
 
 \newcommand{\pdv}[2][]{\frac{\partial#1}{\partial#2}}
@@ -107,10 +107,20 @@
 
 \newcommand{\disk}[2]{\Delta(#1, #2)}
 
+% \newcommand{\Im}[1]{\operatorname{Im}\left(#1\right)}
+\AtBeginDocument{%
+  \renewcommand\Re{\operatorname{Re}}%
+}
+
+\AtBeginDocument{%
+  \renewcommand\Im{\operatorname{Im}}%
+}
+
 %command for alg-closure that automatically adapts its 'bar' to the arg based on the args length (including '\')
 \newcommand{\ols}[1]{\mskip.5\thinmuskip\overline{\mskip-.5\thinmuskip {#1} \mskip-.5\thinmuskip}\mskip.5\thinmuskip} % overline short
 \newcommand{\olsi}[1]{\,\overline{\!{#1}}} % overline short italic
 
+\newcommand{\ti}{t.~i.\ }
 
 \newcommand{\kom}[1]{
     \textcolor{RoyalBlue}{//#1}
@@ -260,7 +270,7 @@ Definicija \ref{reg sing tocke} nam omogoči formulirati prvo opazko.
     Najprej se spomnimo definicije podmnogoterosti. Neprazna podmnožica $X \subseteq \R^{n+k}$ je \emph{$n$-podmnogoterost} razreda gladkosti $\mathcal{C}^r$, za $r \in \{0,1,\dots, \infty, \omega\}$, če za vsako točko $x_0 \in X$ obstaja okolica $U \subseteq \R^{n+k}$ točke $x_0$ in t.~i.\ definicijska funkcija $F: U \subseteq \R^{n+k} \to \R^k$ razreda $\mathcal{C}^r$ na $U$, da velja
     \begin{enumerate}
         \item $X \cap U = F^{-1}(\{0\}) = \{x \in U | F(x) = 0\}$ in
-        \item Jacobijeva matrika definicijske funkcije $F$ ima poln rang povsod na $X \cap U$, t.~j.\  $\rang J F(x) = k$ za vsak $x \in X \cap U$.
+        \item Jacobijeva matrika definicijske funkcije $F$ ima poln rang povsod na $X \cap U$, tj. $\rang J F(x) = k$ za vsak $x \in X \cap U$.
     \end{enumerate}
     Številu $n$ pravimo \emph{dimenzija} podmnogoterosti $X$, številu $k$ pa \emph{kodimenzija}.
     \\
@@ -310,7 +320,7 @@ Definicija \ref{reg sing tocke} nam omogoči formulirati prvo opazko.
     \[
         \pdv[f]{x} = \frac{1}{2} \left( \pdv[f]{x_1} - i\pdv[f]{x_2}\right) = \frac{1}{2} \left( u_{x_1} + i v_{x_1} - i u_{x_2} + v_{x_2}\right) = u_{x_1} + iv_{x_1}
     \]
-    (analogno dobimo za odvod po $y$) in predpostavka o nesingularnosti krivulje nam zagotovita, da je v vsaki točki na $C$ vsaj eden od $u_{x_1}$, $v_{x_1}$, $u_{x_2}$, $v_{x_2}$ neničelni. To pa že zadošča za polnost ranga Jacobijeve matrike $Jg$ v dani točki, saj sta leva in desna $2 \times 2$ bloka alternativna predstavitev kompleksnih števil kot matrična algebra znotraj realnih $2 \times2$ matrik $M_2(\R)$.  
+    (analogno dobimo za odvod po $y$) in predpostavka o nesingularnosti krivulje nam zagotovita, da je v vsaki točki na $C$ vsaj eden od parcialnih odvodov $u_{x_1}$, $v_{x_1}$, $u_{x_2}$, $v_{x_2}$ različen od $0$. To pa že zadošča za polnost ranga Jacobijeve matrike $Jg$ v dani točki, saj sta leva in desna $2 \times 2$ bloka alternativna predstavitev kompleksnih števil kot matrična algebra znotraj realnih $2 \times2$ matrik $M_2(\R)$.  
 \end{dokaz}
 
 Ta trditev pove, katere od afinih algebraičnih krivulj ne le lokalno v okolici regularnih točk izgledajo kot ploskve, temveč tudi so zares ploskve. 
@@ -671,7 +681,7 @@ ki identificira eno krivuljo z drugo. Ob tem se transformira tudi diskriminanta 
     \]
     Ker vsi neničelni skalarni večkratniki matrike $A$ določajo isto projektivnost, lahko brez škode za splošnost privzamemo $a_{33} = 1$. Če vzamemo $u \in \CM$ poljuben, da velja $u^6 = \lambda\inv$, bo 
     \[
-        a_{11} = u^2, \quad a_{22} = u^3, \quad u^4\alpha' = \alpha \quad u^6 \beta' = \beta \quad \text{in} \quad u^{12} \Delta' = \Delta
+        a_{11} = u^2, \quad a_{22} = u^3, \quad u^4\alpha' = \alpha, \quad u^6 \beta' = \beta \quad \text{in} \quad u^{12} \Delta' = \Delta
     \]
     in tako vidimo, da je projektivnost $\Phi$ oblike
     \[
@@ -874,7 +884,7 @@ Na kompleksno ravnino $\C$ vpeljimo relacijo
 To pomeni, da identificiramo vsaki dve točki, ki se razlikujeta kvečjemu za prišteto periodo $\omega \in \Lambda$. 
 Brez težav se lahko prepričamo, da je to ekvivalenčna relacija na $\C$. Tako lahko tvorimo kvocientno množico $\C/_{\sim}$, katere ekvivalenčne razrede bomo označevali z $z + \Lambda$ in jih imenovali \emph{translati}, saj si jih lahko predstavljamo kot za vektor $z$ translirano mrežo $\Lambda$. Pripadajoča kvocientna projekcija bo $\pi : \C \to \C/_{\sim}$. Kvocient $\C/_{\sim}$ bomo od tod dalje rajši označevali z $\C/\Lambda$. 
 
-Zaenkrat bomo $\C/\Lambda$ razumeli zgolj kot kvocientno množico, kasneje pa ga bomo opremili s topologijo, ki nam bo razkrila, da je ta prostor v resnici homeomorfen torusu. Za tem bomo definirali še s kompleksno strukturo, ki nam bo na njem omogočila definirati holomorfne preslikave.
+Zaenkrat bomo $\C/\Lambda$ razumeli zgolj kot kvocientno množico, kasneje pa ga bomo opremili s topologijo, ki nam bo razkrila, da je ta prostor v resnici homeomorfen torusu. Za tem bomo definirali še kompleksno strukturo, ki nam bo na njem omogočila definirati holomorfne preslikave.
 
 
 \begin{definicija}
@@ -1506,16 +1516,16 @@ Poljubni mreži $\Lambda \subseteq \C$ lahko torej priredimo eliptično krivuljo
     \begin{enumerate}[(i)]
         \item $(U_i)_{i \in I}$ je odprto pokritje za $X$.
         \item Preslikava $\varphi_i : U_i \to U'_i \subseteq \C$ je homeomorfizem med okolico $U_i \subseteq X$ in neko odprto pomnožico $U'_i \subseteq \C$. Njenemu inverzu pravimo \emph{lokalna parametrizacija}.
-        \item Za poljubna $i,j \in I$ je t.~i.\ \emph{prehodna preslikava}
+        \item Za poljubna $i,j \in I$ je \ti \emph{prehodna preslikava}
         \[
             \varphi_{ij} = \varphi_i \circ \varphi_j\inv : \varphi_j(U_i \cap U_j) \to \varphi_i(U_i \cap U_j)   
         \]
-        holomorfna na odprti množici $\varphi_j(U_i \cap U_j) \subseteq \C$.
+        holomorfna na odprti množici $\varphi_j(U_i \cap U_j) \subseteq \C$. Temu pogoju pravimo \emph{kompatibilnostni pogoj}.
     \end{enumerate}
 \end{definicija}
 
 \begin{zgled*}
-    
+    Riemannova sfera
 \end{zgled*}
 
 \begin{definicija}
@@ -1525,6 +1535,14 @@ Poljubni mreži $\Lambda \subseteq \C$ lahko torej priredimo eliptično krivuljo
     \]
     holomorfna na $\varphi(U \cap f\inv(V)) \subseteq \C$.
 \end{definicija}
+
+\begin{zgled*}
+    kako je meromorfna funkcija v resnici holomorfna preslikava v Riemannovo ploskev (glede na to definicijo)
+\end{zgled*}
+
+% Naslednja trditev je posledica izreka o inverzni preslikavi in posebaj 
+Zelo pomemba trditev, ki odpravi skrbi o vprašanju holomorfnosti inverza holomorfne bijekcije je naslednja. 
+% poskrbi, da nam ni potrebno preverjati holomorfnosti inverza 
 
 \begin{trditev}
     \label{holomorfna bijekcija je biholomorfizem}
@@ -1552,14 +1570,16 @@ Poljubni mreži $\Lambda \subseteq \C$ lahko torej priredimo eliptično krivuljo
     \[
         \psi(f(\varphi\inv(z))) - \psi(f(\varphi\inv(z_0))) = (z - z_0)^m g(z),
     \]
-    kjer je $m \geq 2$ in $g \in \hol{W}$ brez ničle na $W$, kar bi bilo v nasprotju z injektivnostjo $\psi \circ f \circ \varphi\inv$. Tako dobimo po izreku o inverzni funkciji \cite[Izrek 67]{Globevnik} holomorfen inverz definiran na okolici točke $\psi(f(\varphi(z_0))) \in \psi(f(U) \cap V)$, katerega predpis se bo zaradi enoličnosti inverzov ujemal z $\varphi \circ f\inv \circ \psi\inv$ na ustrezni domeni. Tako storimo za vsak $z_0 \in \varphi(U \cap f\inv(V))$, kar nam zagotovi holomorfnost preslikave $\varphi \circ f\inv \circ \psi\inv$ na celotnem $\psi(f(U) \cap V)$. 
+    kjer je $m \geq 2$ in $g \in \hol{W}$ brez ničle na $W$, % lahko definiramo $m$-ti koren funkcije $g$, tj. $h^m = g$
+    kar bi bilo v nasprotju z injektivnostjo $\psi \circ f \circ \varphi\inv$. Tako dobimo po izreku o inverzni funkciji \cite[Izrek 67]{Globevnik} holomorfen inverz definiran na okolici točke $\psi(f(\varphi(z_0))) \in \psi(f(U) \cap V)$, katerega predpis se bo zaradi enoličnosti inverzov ujemal z $\varphi \circ f\inv \circ \psi\inv$ na ustrezni domeni. Tako storimo za vsak $z_0 \in \varphi(U \cap f\inv(V))$, kar nam zagotovi holomorfnost preslikave $\varphi \circ f\inv \circ \psi\inv$ %na uniji okolic vseh točk iz $\psi(f(U) \cap V)$, kar pomeni holomorfnost 
+    na celotnem $\psi(f(U) \cap V)$. 
     
     S tem smo pokazali holomorfnost preslikave $f\inv$ v vseh lokalnih kartah Riemannovih ploskev $X$ in $Y$, kar zagotovi biholomorfnost preslikave $f$ in zaključi dokaz. 
 \end{dokaz}
 
 \begin{izrek}(Izrek o implicitni preslikavi)
     \label{izrek o impliclitni preslikavi}
-    Naj bo $\Omega \subseteq \C^2$ odprto območje in naj bo $f : \Omega \to \C : (z, w) \mapsto f(z,w)$ funkcija, ki je holomorfna v obeh spremenljivkah posebej. Denimo, da je $(\alpha, \beta) \in \Omega$ ničla za $f$ in, da velja $f_w(\alpha, \beta) \neq 0$, kjer $f_w$ označuje kompleksni odvod po drugi spremenljivki. Tedaj obstajata dovolj majhni okolici $U \subseteq \C$ točke $\alpha$ in $V \subseteq \C$ okolica točke $\beta$ ter enolično določena holomorfna preslikava $\phi : U \to V$, ki izpolnjuje pogoj: 
+    Naj bo $\Omega \subseteq \C^2$ odprto območje in naj bo $f : \Omega \to \C : (z, w) \mapsto f(z,w)$ funkcija, ki je holomorfna v obeh spremenljivkah posebej. Denimo, da je $(\alpha, \beta) \in \Omega$ ničla za $f$ in da velja $f_w(\alpha, \beta) \neq 0$, kjer $f_w$ označuje kompleksni odvod po drugi spremenljivki. Tedaj obstajata dovolj majhni okolici $U \subseteq \C$ točke $\alpha$ in $V \subseteq \C$ okolica točke $\beta$ ter enolično določena holomorfna preslikava $\phi : U \to V$, ki izpolnjuje pogoj: 
     Za vse pare $(z, w) \in U \times V$ je $f(z,w) = 0$ natanko tedaj, ko je $w = \phi(z)$.
     
     % za katero velja, da je za vse pare $(z, w) \in U \times V$ $f(z,w) = 0$ natanko tedaj, ko je $w = \phi(z)$.
@@ -1569,7 +1589,7 @@ Poljubni mreži $\Lambda \subseteq \C$ lahko torej priredimo eliptično krivuljo
 \end{izrek}
 
 \begin{komentar}
-    To je dobro poznani izrek o implicitni preslikavi, ki smo ga že srečali. Z drugimi besedami pravi, da lahko množico ničel gladke funkcije $f$ lokalno predstavimo kot graf neke gladke funkcije $\phi$ nad eno izmed spremenljivk, za nas pa bo pomembno, da ta funkcija $\phi$ ni le gladka, ampak tudi holomorfna. 
+    To je dobro poznani izrek o implicitni preslikavi, ki smo ga že srečali. Z drugimi besedami pravi, da lahko množico ničel gladke funkcije $f$ lokalno predstavimo kot graf neke gladke funkcije $\phi$ nad eno izmed spremenljivk, za nas pa bo pomembno, da ta funkcija $\phi$ ni le gladka, ampak tudi holomorfna, če je le $f$ holomorfna. 
 \end{komentar}
 
 \begin{dokaz}
@@ -1579,11 +1599,11 @@ Poljubni mreži $\Lambda \subseteq \C$ lahko torej priredimo eliptično krivuljo
     \[
         f_{\bar{z}}(z, \phi(z)) + f_{w}(z, \phi(z)) \pdv[\phi]{\bar{z}}(z) = 0.  
     \] 
-    Ker je $f$ holomorfna v prvi spremenljivki je $f_{\bar{z}}(z, \phi(z)) = 0$ za vse $z \in U$, po drugi strani pa zaradi zveznosti in $\pdv[f]{w}(\alpha, \beta) \neq 0$ velja $f_{w}(z, \phi(z)) \neq 0$ na celotnem $U$, ki ga po potrebi lahko tudi zmanjšamo. Od tod pa sledi
+    Ker je $f$ holomorfna v prvi spremenljivki je $f_{\bar{z}}(z, \phi(z)) = 0$ za vse $z \in U$, po drugi strani pa zaradi zveznosti odvoda $f_w$ in $f_w(\alpha, \beta) \neq 0$ velja $f_{w}(z, \phi(z)) \neq 0$ na celotnem $U$, ki ga po potrebi lahko tudi zmanjšamo. Od tod sledi
     \[
         \pdv[\phi]{\bar{z}} = 0 \quad \text {povsod na $U$,}  
     \]
-    kar je ekvivalentno holomorfnosti funkcije $\phi$ na $U$. 
+    kar je -- pod predpostavko gladkosti funkcije $\phi$, ki drži -- ekvivalentno holomorfnosti funkcije $\phi$ na $U$. 
 \end{dokaz}
 
 
@@ -1591,13 +1611,15 @@ Poljubni mreži $\Lambda \subseteq \C$ lahko torej priredimo eliptično krivuljo
 
 \subsection{Kompleksna struktura na eliptični krivulji}
 
-V tem razdelku si bomo ogledali kako eliptični krivulji oziroma kar vsaki nesingularni projektivni algebraični krivulji priredimo kompleksno strukturo, da ta postane kompaktna Riemannova ploskev. Začeli bomo z afino različico krivulje v $\C^2$, na njej definirali kompleksen atlas, nato pa ga bomo prenesli in nekoliko dopolnili do kompleksnega atlasa projektivne krivulje. 
-\\
+V tem razdelku si bomo ogledali kako eliptični krivulji 
+% oziroma kar vsaki nesingularni projektivni algebraični krivulji 
+priredimo kompleksno strukturo, da ta postane kompaktna Riemannova ploskev. Ta postopek lahko z isto idejo še malce posplošimo in tako pokažemo kako prirediti kompleksno strukturo poljubni nesingularni projektivni algebraični krivulji. Začeli bomo z afino različico krivulje v $\C^2$, na njej definirali kompleksen atlas, nato pa ga prenesli in nekoliko dopolnili do kompleksnega atlasa projektivne krivulje. 
 % \begin{center}
 %     \textsc{1. del}
 % \end{center}
 
-\textsc{1. del} Naj bo afina različica eliptične krivulje podana z enačbo
+\subsubsection*{\textsc{1. del}}
+Naj bo afina različica eliptične krivulje podana z enačbo
 \[
     E: \quad y^2 = 4x^3 - ax - b, \quad a^3 - 27b^2 \neq 0
 \]
@@ -1611,14 +1633,18 @@ kjer je $W \subseteq \C$ okolica $\alpha$ in $W' \subseteq \C$ okolica $\beta$. 
 \[
     W \to E : z \mapsto (z, \phi(z)).
 \] 
-Ta je med drugim homeomorfizem na svojo sliko $U := (W \times \phi(W)) \cap E$, ki je zaradi holomorfnosti\footnote{$\phi$ je nekonstantna holomorfna funkcija, torej je odprta preslikava} $\phi$ odprta v $E$, njen inverz pa je projekcija $\pr_1 : U \subseteq E \to W$, ki jo bomo odslej označevali s $\varphi$. 
+Ta je med drugim homeomorfizem na svojo sliko $U := (W \times \phi(W)) \cap E$, ki je zaradi holomorfnosti $\phi$ odprta v $E$. Preslikava $\phi$ je holomorfna in nekonstantna in je kot taka odprta preslikava, zato je škatlasta okolica $W \times \phi(W)$ odprta v $\C^2$ in nazadnje $U \subseteq E$ odprta v $E$. Inverz te lokalne parametrizacije je projekcija $\pr_1 : U \subseteq E \to W$, ki jo bomo odslej označevali s $\varphi$. 
+
+% \footnote{$\phi$ je nekonstantna holomorfna funkcija, torej je odprta preslikava} 
+
 % phi(W) je odp v C, torej je W x phi(W) odprta v C^2, torej je U odprta v E.
 
-
+%%%%
 % slika kako je U graf funkcije \phi (kot slika v Kompl. torusi & el. krivulje p.14)
+%%%%
 
 \begin{komentar}
-    Zelo podobno bi storili, v primeru ko je $f_x(\alpha, \beta) \neq 0$. Tedaj bi lokalna parametrizacija bila oblike $z \mapsto (\phi(z), z)$, okolica $U$ pa bi bila graf holomorfne funkcije $\phi$ nad $y$-spremenljivko namesto $x$. Tako bi za predpis homeomorfizma $\varphi$ uporabili projekcijo $\pr_2$ namesto $\pr_1$.
+    Zelo podobno bi storili, v primeru ko je $f_x(\alpha, \beta) \neq 0$. Tedaj bi lokalna parametrizacija bila oblike $z \mapsto (\phi(z), z)$, okolica $U$ pa bi bila graf holomorfne funkcije $\phi$ nad spremenljivko $y$ namesto $x$. Tako bi za predpis homeomorfizma $\varphi$ uporabili projekcijo $\pr_2$ namesto $\pr_1$.
 \end{komentar}
 
 Tak par $(U, \varphi)$ bo lokalna karta pri točki $(\alpha, \beta) \in E$, za skupek vseh teh pa bi se radi prepričali, da tvori kompleksen atlas za $E$. 
@@ -1633,7 +1659,7 @@ holomorfne. Vzemimo poljubni dve karti $(U_i, \varphi_i)$ in $(U_j, \varphi_j)$,
     \[
         (\varphi_i \circ \varphi_j\inv)(z) = \pr_1(z, \phi_j(z)) = z \quad \text{za vse $z \in \varphi_j(U_i \cap U_j)$,}
     \] 
-    kar pomeni, da je prehodna preslikava $\varphi_i \circ \varphi_j\inv = \id_{\varphi_j(U_i \cap U_j)}$ enaka idnetiteti na množici $\varphi_j(U_i \cap U_j)$, ki je očitno holomorfna. 
+    kar pomeni, da je prehodna preslikava $\varphi_i \circ \varphi_j\inv = \id_{\varphi_j(U_i \cap U_j)}$ enaka identiteti na množici $\varphi_j(U_i \cap U_j)$, ki je očitno holomorfna. 
 
     \item Okolici $U_i$, $U_j$ nista grafa funkcij nad istima spremenljivkama in recimo, da je $U_i$ graf funkcije $\phi_i$ nad spremenljivko $x$, množica $U_j$ pa naj bo graf funkcije $\phi_j$ nad spremenljivko $y$. Tedaj izračunamo
     \[
@@ -1642,12 +1668,11 @@ holomorfne. Vzemimo poljubni dve karti $(U_i, \varphi_i)$ in $(U_j, \varphi_j)$,
     Funkcija $\phi_j$ je holomorfna na kvečjemu večji množici $W_j \supseteq \varphi_j(U_i \cap U_j)$, zato je prehodna preslikava $\varphi_i \circ \varphi_j\inv$ holomorfna na celotnem $\varphi_j(U_i \cap U_j)$. Do povsem enakega zaključka pridemo, če je $U_i$ graf funkcije nad spremenljivko $y$, $U_j$ pa nad spremenljivko $x$. 
 \end{enumerate} 
 Tako vidimo, da je družina lokalnih kart $((U_i, \varphi_i))_{i \in I}$ res kompleksni atlas za $E$. 
-\\
 
 % \begin{center}
 %     \textsc{2. del}
 % \end{center}
-\textsc{2. del} \emph{Projektivno zaprtje} afine verzije eliptične krivulje $E$ bo projektivna krivulja $\olsi{E} \subseteq \PC$ podana s homogenizacijo enačbe za $E$
+\subsubsection*{\textsc{2. del}} \emph{Projektivno zaprtje} afine verzije eliptične krivulje $E$ bo projektivna krivulja $\olsi{E} \subseteq \PC$ podana s homogenizacijo enačbe za $E$
 \[
     \olsi{E} : y^2z = 4x^3 - axz^2 - bz^3  
 \]
@@ -1675,20 +1700,24 @@ Označimo $V_i = \pi(\iota(U_i))$, $W_i \subseteq \C$ naj bo kot prej slika home
 \]
 tako bo $\varphi'_i \circ \iota = \varphi_i$.
 
-Preslikava $\pi: \iota(U_i) \to V_i \subseteq \PC$ je injekcija, saj se nobeni dve različni točki iz $\iota(U_i)$ ne razlikujeta za skalarni večkratnik iz $\CM$. Kot homeomorfizem je tudi $\varphi'_i$ injekcija, kar pomeni, da imata ti dve preslikavi enaka vlakna. Od tod sklepamo, da je inducirana preslikava $\olsi{\varphi}_i$ dobro definirana zvezna injekcija. Iz surjektivnosti $\varphi'_i$ sledi surjektivnost $\olsi{\varphi}_i$, ker pa je $\varphi'_i$ homeomorfizem (torej v posebnem kvocientana presliava), je inducirana preslikava $\olsi{\varphi}_i : V_i \to W_i$ homeomorfizem, kot ponazarja komutativen diagram. Ta premislek utemeljuje \cite[Posledica 3.23]{MrcunTop}.
+Preslikava $\pi: \iota(U_i) \to V_i \subseteq \PC$ je injekcija, saj se nobeni dve različni točki iz $\iota(U_i)$ ne razlikujeta za skalarni večkratnik iz $\CM$ in zaradi tega tvori samo trivialne identifikacije. Kot homeomorfizem je tudi $\varphi'_i$ injekcija, kar pomeni, da imata ti dve preslikavi enaka vlakna -- same enoelementne množice. Od tod sklepamo, da je inducirana preslikava $\olsi{\varphi}_i$ dobro definirana zvezna injekcija. Iz surjektivnosti $\varphi'_i$ sledi surjektivnost $\olsi{\varphi}_i$, ker pa je $\varphi'_i$ homeomorfizem (torej v posebnem kvocientana presliava), je inducirana preslikava $\olsi{\varphi}_i : V_i \to W_i$ homeomorfizem, kot ponazarja komutativen diagram. Ta premislek utemeljuje \cite[Posledica 3.23]{MrcunTop}.
 
-\[    
+\begin{equation}
+    \label{projektivna karta diagram}    
     \begin{tikzcd}
         \iota(U_i) \arrow{r}{\varphi'_i} \ar[labels=left]{d}{\pi} & W_i \\
         V_i \ar[dashed, labels=below right]{ur}{\olsi{\varphi}_i} 
     \end{tikzcd}
-\]
+\end{equation}    
 
-Iz komutativnega diagrama dobimo lahko predpis za inverz induciranega homeomorfizma $\olsi{\varphi}_i\inv = \pi \circ {\varphi'_i}\inv$. Tako pa se lahko prepričamo o kompatibilanosti lokalnih kart $(V_i, \olsi{\varphi_i})$. Za poljubna $i,j \in I$ velja
+
+Iz komutativnega diagrama lahko inverz induciranega homeomorfizma izrazimo kot $\olsi{\varphi}_i\inv = \pi \circ {\varphi'_i}\inv$. To pa nam omogoči prepričati se o kompatibilanosti lokalnih kart $(V_i, \olsi{\varphi_i})$.
+% Tako pa se lahko prepričamo o kompatibilanosti lokalnih kart $(V_i, \olsi{\varphi_i})$. 
+Za poljubna $i,j \in I$ velja
 \[
-    \olsi{\varphi_i} \circ \olsi{\varphi_j}\inv = 
-    \olsi{\varphi_i} \circ \pi \circ {\varphi'_j}\inv = 
-    \varphi'_i \circ {\varphi'_j}\inv = 
+    \olsi{\varphi}_i \circ \olsi{\varphi}_j\inv = 
+    \olsi{\varphi}_i \circ \pi \circ {\varphi'}_j\inv = 
+    \varphi'_i \circ {\varphi'}_j\inv = 
     \varphi'_i \circ \iota \circ \varphi_j\inv = 
     \varphi_i \circ \varphi_j\inv,
 \]
@@ -1703,19 +1732,21 @@ je v omenjeni točki je različen od nič, kar pomeni, da po izreku o implicitn
     \varphi'_\infty : U_\infty \to W_\infty \quad (x,y,z) \mapsto x
 \]
 homeomorfizem z inverzom podanim s predpisom $x \mapsto (x,1,\phi(x))$. Označimo $V_\infty = \pi(U_\infty) \subseteq \olsi{E} \subseteq \PC$. Sedaj se pod istimi pogoji kot zgoraj inducira homeomorfizem $\olsi{\varphi}_\infty : V_\infty \to W_\infty$, da komutira diagram.
-\[    
+\begin{equation}
+    \label{projektivna karta v inf diagram}    
     \begin{tikzcd}
         U_\infty \arrow{r}{\varphi'_\infty} \ar[labels=left]{d}{\pi} & W_\infty \\
         V_\infty \ar[dashed, labels=below right]{ur}{\olsi{\varphi}_\infty}
     \end{tikzcd}
-\]
+\end{equation}   
+
 
 Preverimo, da je lokalna karta $(V_\infty, \olsi{\varphi}_\infty)$ kompatibilna z ostalimi lokalnimi kartami, torej, da sta
 \begin{align*}
     \olsi{\varphi}_\infty \circ \olsi{\varphi}_i\inv &: \olsi{\varphi}_i(V_\infty \cap V_i) \to \olsi{\varphi}_\infty(V_\infty \cap V_i) \\
     \olsi{\varphi}_i \circ \olsi{\varphi}_\infty\inv &: \olsi{\varphi}_\infty(V_\infty \cap V_i) \to \olsi{\varphi}_i(V_\infty \cap V_i) 
 \end{align*}
-holomorfni za poljuben $i \in I$. Izračunamo
+holomorfni za poljuben $i \in I$. Z upoštevanjem komutativnih diagramov \eqref{projektivna karta diagram} in \eqref{projektivna karta v inf diagram} izračunamo
 \begin{align*}
     \olsi{\varphi}_\infty \circ \olsi{\varphi}_i\inv = 
     \olsi{\varphi}_\infty \circ \pi \circ {\varphi'_i}\inv =
